--- a/templates/Facebook.html
+++ b/templates/Facebook.html
@@ -194,7 +194,7 @@
         <p>Make sure to enter a valid Facebook Video URL for the best results.</p>
     </div>
 
-    <form method="POST">
+    <form method="GET">
         <label for="url">Enter Facebook Video URL:</label>
         <div class="search-container">
             <input type="text" id="url" name="url" placeholder="https://www.facebook.com/.../video..." required>
