--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
   <div class="wrapper">
     <div class="profile-card js-profile-card">
       <div class="profile-card__img">
-        <img src="https://scontent.fdac11-1.fna.fbcdn.net/v/t39.30808-6/460367015_122102561726526191_3266062319467545966_n.jpg?stp=dst-webp_e15_q70_s1080x1080_tt1_u&efg=eyJ1cmxnZW4iOiJ1cmxnZW5fZnJvbV91cmwifQ&_nc_cid=0&_nc_ad=z-m&_nc_rml=0&_nc_ht=scontent.fdac11-1.fna&_nc_cat=104&_nc_ohc=V3_iWBIMBp4Q7kNvgFDgAx4&_nc_gid=A9VGJ7Mv0De7Dt4NKbEEqnT&ccb=1-7&_nc_sid=6ee11a&oh=00_AYA7me_ZXFj8w3U3p2jrWqkLUG8s7LHkuTQth39wS2HiAQ&oe=66F1E25A" alt="profile card">
+        <img src="https://i.postimg.cc/ydJFJTyz/1726640413935-3.jpg" alt="profile card">
       </div>
       <div class="profile-card__cnt js-profile-cnt">
         <div class="profile-card__name">Shahariar Mahfuz</div>
